--- a/php/style.css
+++ b/php/style.css
@@ -50,13 +50,13 @@ pre {
     color: #ffffff;
     font-size: 16px;
     width: fit-content;
-    padding: 5px;
+    padding:5px 5px 5px 0px;
 }
 
 .fun{
     border: 1px solid;
     border-radius: 5px;
-    padding: 5px;
+    padding: 3px;
 }
 
 span{
